feat: implement pagination for active entities in repositories and controllers
- Updated ServiceRepositoryAdapter to return paginated results for active services.
- Updated UserRepositoryAdapter to return paginated results for active users.
- Modified JpaAppointmentRepository to support pagination in findByFilters method.
- Updated JpaAuditLogRepository to return paginated audit logs.
- Enhanced JpaPatientRepository and JpaUserRepository to return paginated active patients and users.
- Refactored AppointmentController, AuditLogController, PatientController, ProfessionalController, ServiceController, and UserController to handle paginated responses.
- Introduced PageResponseDTO to standardize paginated responses across controllers.
- Updated use cases and tests to support pagination, ensuring correct delegation to repositories and accurate results.
- Adjusted integration tests to validate pagination functionality in repository queries.